methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:41: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:57: error: expected class or object definition
def colorie()={
^SlugHunting:62: error: Unmatched closing brace '}' ignored here
}
^